# MyNDK

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/liyihuanx/myndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  NativeConstant.h  NativePlayer.cpp  NativePlayer.h  VideoChannel.cpp  VideoChannel.h  com_liyihuanx_myndk_SecondActivity.h  log4c.h  native-lib.cpp  safe_queue.h
app/src/main/cpractice/: SecondActivity.java  UserBean.java  com_liyihuanx_myndk_SecondActivity.h  practice.cpp
app/src/main/java/com/liyihuanx/myndk/: ConstantCode.java  MainActivity.kt  PlayerListener.java  SecondActivity.java  SimplePlayer.java  UserBean.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/liyihuanx/myndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
